# dht22-rs

./: Cargo.toml  run.sh
src/: main.rs
