[package]
categories = ["embedded", "no-std"]
name = "dht22"
version = "0.0.0"
keywords = ["embedded-hal", "temperature", "humidity", "sensor"]

[dependencies]
cortex-m = "0.4.3"
cortex-m-rt = { version = "0.3.12", features = ["abort-on-panic"] }
cortex-m-semihosting = "0.2.0"
embedded-hal = { git = "https://github.com/astro/embedded-hal.git", branch = "io-4", features = ["unproven"] }
stm32f429 = { version = "0.3.0", features = ["rt"] }

[profile.release]
debug = 2
lto = true
